# framework_ros

./: rviz2.rviz
.ros/: config.rviz  framework_gui_config.json
install/: local_setup.sh  setup.sh
install/behavior_package/share/behavior_package/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/gui_package/lib/gui_package/: framework  framework_gui  path_preview_visualizer  world_tf_broadcaster
install/gui_package/share/gui_package/: package.sh
install/interface_package/include/interface_package/interface_package/action/: run_behavior.h  run_behavior.hpp
install/interface_package/include/interface_package/interface_package/action/detail/: run_behavior__functions.c  run_behavior__functions.h  run_behavior__rosidl_typesupport_fastrtps_cpp.hpp  run_behavior__struct.h  run_behavior__type_support.h
install/interface_package/include/interface_package/interface_package/msg/: ball_state.h  behavior_choice.hpp  behavior_status.h  behavior_status.hpp  field_dimensions.h  kick_parameters.h  path_preview.hpp  pose2_d.hpp  robot_state.h  robot_state.hpp  rosidl_generator_cpp__visibility_control.hpp  team_color.h  team_network_config.h  team_network_config.hpp  twist2_d.h  twist2_d.hpp  vision_detection.h  vision_detection.hpp  vision_geometry.h
install/interface_package/include/interface_package/interface_package/msg/detail/: ball_state__rosidl_typesupport_fastrtps_cpp.hpp  ball_state__rosidl_typesupport_introspection_c.h  ball_state__rosidl_typesupport_introspection_cpp.hpp  ball_state__struct.hpp  ball_state__traits.hpp  (+118 more)
install/interface_package/include/interface_package/interface_package/srv/: get_navigation_config.h  save_config.h  save_config.hpp  send_replacement_ball.hpp  send_replacement_robot.h  send_replacement_robot.hpp  set_kick_parameters.hpp  set_prepare_kickoff_parameters.h  set_team.h  set_team.hpp  set_team_network.hpp
install/interface_package/share/interface_package/: package.sh  package.xml
install/interface_package/share/interface_package/action/: RunBehavior.idl
install/interface_package/share/interface_package/cmake/: export_interface_package__rosidl_generator_cExport.cmake  export_interface_package__rosidl_generator_cppExport.cmake  export_interface_package__rosidl_typesupport_fastrtps_cExport.cmake  interface_packageConfig.cmake  interface_package__rosidl_typesupport_cExport.cmake  interface_package__rosidl_typesupport_cppExport.cmake  interface_package__rosidl_typesupport_introspection_cExport.cmake
install/interface_package/share/interface_package/msg/: BehaviorChoice.idl  BehaviorChoice.msg  BehaviorStatus.msg  KickParameters.idl  PathPreview.idl  Pose2D.idl  RobotTarget.idl  TeamColor.idl  TeamNetworkConfig.msg  Twist2D.msg  VisionDetection.idl  VisionDetection.msg  VisionGeometry.idl  VisionGeometry.msg  WorldState.idl  WorldState.msg
install/interface_package/share/interface_package/srv/: GetNavigationConfig.idl  GetNavigationConfig_Response.msg  LoadConfig.srv  LoadConfig_Request.msg  LoadConfig_Response.msg  SaveConfig.idl  SendReplacementBall.srv  SendReplacementRobot.idl  SendRobotCommand.idl  SendRobotCommand_Request.msg  SetKickParameters_Request.msg  SetNavigationConfig.idl  SetNavigationConfig_Request.msg  SetPrepareKickoffParameters.idl  SetReplacementNetwork.idl  SetTeam.idl  SetTeamNetwork_Request.msg
install/navigation_package/include/grsim/framework/planning/: trajectory_optimizer.h
install/navigation_package/lib/navigation_package/: navigation_manager_node
install/navigation_package/share/navigation_package/: local_setup.sh  package.sh
install/navigation_package/share/navigation_package/cmake/: ament_cmake_export_targets-extras.cmake  export_navigation_moduleExport.cmake  navigation_packageConfig.cmake
install/robot_communication_package/lib/robot_communication_package/: robot_commander
install/robot_communication_package/share/ament_index/resource_index/package_run_dependencies/: robot_communication_package
install/robot_communication_package/share/robot_communication_package/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/robot_communication_package/share/robot_communication_package/cmake/: ament_cmake_export_dependencies-extras.cmake  robot_communication_packageConfig.cmake
install/vision_receiver_package/lib/vision_receiver_package/: vision_receiver
install/vision_receiver_package/share/vision_receiver_package/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/behavior_package/: setup.py
src/behavior_package/behavior_package/: __init__.py  behavior.py
src/gui_package/: package.xml  setup.py
src/gui_package/gui_package/: path_preview_visualizer.py  robot_faces.py
src/interface_package/: CMakeLists.txt
src/interface_package/interface_package/: __init__.py
src/interface_package/interface_package/proto/: __init__.py
src/interface_package/launch/: bringup.launch.py
src/interface_package/msg/: BallState.msg  NavigationConfig.msg  PathPreview.msg  PrepareKickoffParameters.msg  TeamColor.msg
src/interface_package/proto/: messages_robocup_ssl_detection.proto  messages_robocup_ssl_detection_tracked.proto  messages_robocup_ssl_wrapper_tracked.proto
src/interface_package/srv/: SetKickParameters.srv
src/navigation_package/: CMakeLists.txt  package.xml
src/navigation_package/include/grsim/framework/navigation/: navigation_module.h
src/navigation_package/include/grsim/framework/planning/: path_planner.h
src/navigation_package/src/: navigation_manager_node.cpp  navigation_module.cpp  navigation_node.cpp  path_planner.cpp  trajectory_optimizer.cpp
src/robot_communication_package/: CMakeLists.txt  setup.cfg  setup.py
src/robot_communication_package/resource/: robot_communication_package
src/robot_communication_package/robot_communication_package/: control_client.py  robot_commander_node.py
src/vision_receiver_package/: package.xml  setup.cfg  setup.py
src/vision_receiver_package/vision_receiver_package/: vision_client.py  vision_node.py
(+101 files in other folders)
