<?xml version="1.0"?>
<package format="3">
  <name>navigation_package</name>
  <version>0.0.0</version>
  <description>Navigation primitives ported from the legacy framework (planner + optimizer).</description>
  <maintainer email="thxssio@gmail.com">thxssio</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>interface_package</depend>
  <depend>rclcpp</depend>
  <depend>rosidl_default_runtime</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
