<?xml version="1.0"?>
<package format="3">
  <name>behavior_package</name>
  <version>0.0.0</version>
  <description>Reusable behavior abstractions and helper utilities for the framework GUI stack.</description>

  <maintainer email="unknown@example.com">Unknown</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
